--- a/css/CSS HOA FINAL.css
+++ b/css/CSS HOA FINAL.css
@@ -79,7 +79,7 @@ li a:hover:not(.active) {
 	background-color: #111
 }
 .active {
-    background-color: #4CAF50;
+    background-color:#37BECF;
 }
 
 .park{
